# mini-atomas

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Doxyfile  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: ci.yml
cmake/: mith-atomas-config.cmake.in
docs/: SEMVER.md
examples/: CMakeLists.txt
examples/flocking_demo_3d/: CMakeLists.txt  main.cpp
examples/spatial_index_benchmark/: CMakeLists.txt  main.cpp
examples/swarm_benchmark/: CMakeLists.txt  main.cpp
include/mith/: api_stability.h  mith.h
scripts/: build_docs.sh  run_swarm_benchmark.sh
src/behaviour/: action_validator_system.cpp  builtin_action_handlers.cpp
src/comms/: beacon_system.cpp  neighbour_table.cpp  serial_framing.cpp  serial_transport.cpp  udp_multicast_transport.cpp  udp_wire.cpp
src/core/: binary_trace_sink.cpp  registry.cpp  scheduler.cpp  world.cpp
src/identity/: ed25519.cpp  hierarchical_id.cpp  uuid.cpp
src/sim/: sim_bus.cpp  sim_clock.cpp
src/systems/: clock_sync_system.cpp  discovery_system.cpp  flocking_system.cpp  partition_merge_system.cpp  task_alloc_system.cpp
tests/: CMakeLists.txt
tests/integration/: test_serial_transport_integration.cpp  test_udp_multicast_integration.cpp
tests/unit/: test_action.cpp  test_action_handler_registry.cpp  test_beacon_system.cpp  test_binary_trace_sink.cpp  test_channel_aware_transport.cpp  test_clock_sync_system.cpp  test_discovery_system.cpp  test_ed25519.cpp  test_helpers.h  (+17 more)
(+45 files in other folders)
